--- a/pos_tagger.ipynb
+++ b/pos_tagger.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "assignment_2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "assignment_2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
