Combine wh and binary answering

--- a/yes_no.ipynb
+++ b/yes_no.ipynb
@@ -286,6 +286,7 @@
     "\n",
     "    else:\n",
     "        print(\"ERROR: Not equipt to handle questions parsed as: \" + str(question.label()))\n",
+    "        was_declarative = True #NOTE: This is to flag to just do a closest match return\n",
     "        new_sentence = tree_to_string(question)\n",
     "        #new_sentence = \"\" #FIXME: Possibly include some other signal when this does not parse correctly\n",
     "        #FIXME: Recursively run through subtrees of question to find these parts?\n",
