--- a/yes_no.ipynb
+++ b/yes_no.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try:\n",
+    "Try for this test:\n",
     "\n",
     "java -mx4g -cp \"*\" edu.stanford.nlp.pipeline.StanfordCoreNLPServer \\ -preload tokenize,parse,depparse,lemma \\ -status_port 9000 -port 9000 -timeout 15000 &\n",
     "\n",
-    "Call:\n",
+    "Call for full system:\n",
     "\n",
     "java -mx4g -cp \"*\" edu.stanford.nlp.pipeline.StanfordCoreNLPServer \\ -preload tokenize,ssplit,pos,lemma,ner,parse,depparse \\ -status_port 9000 -port 9000 -timeout 15000 &"
    ]
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,11 +545,65 @@
     "                break\n",
     "    \n",
     "    if bool_yes:\n",
-    "        print(\"YES\")\n",
-    "        \n",
+    "        print(\"YES\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{'go_after', 'Canis_familiaris', 'frank', 'track', 'frump', 'hound', 'give_chase', 'wienerwurst', 'pawl', 'hot_dog', 'click', 'chase', 'blackguard', 'dog-iron', 'tag', 'andiron', 'hotdog', 'wiener', 'detent', 'frankfurter', 'dog', 'trail', 'bounder', 'domestic_dog', 'chase_after', 'weenie', 'firedog', 'heel', 'tail', 'cad'}\nSynset name :   dog.n.01\n\nSynset abstract term :   [Synset('canine.n.02'), Synset('domestic_animal.n.01')]\n\nSynset specific term :   [Synset('basenji.n.01'), Synset('corgi.n.01'), Synset('cur.n.01'), Synset('dalmatian.n.02'), Synset('great_pyrenees.n.01'), Synset('griffon.n.02'), Synset('hunting_dog.n.01'), Synset('lapdog.n.01'), Synset('leonberg.n.01'), Synset('mexican_hairless.n.01'), Synset('newfoundland.n.01'), Synset('pooch.n.01'), Synset('poodle.n.01'), Synset('pug.n.01'), Synset('puppy.n.01'), Synset('spitz.n.01'), Synset('toy_dog.n.01'), Synset('working_dog.n.01')]\n\nHyper:  {'canine', 'canid'}\n\nHypo:  {'basenji', 'mutt', 'spitz', 'Leonberg', 'Newfoundland', 'pug', 'pug-dog', 'dalmatian', 'toy', 'corgi', 'griffon', 'barker', 'mongrel', 'pooch', 'cur', 'doggy', 'poodle', 'doggie', 'puppy', 'lapdog', 'bow-wow'}\n"
+    }
+   ],
+   "source": [
+    "from nltk.corpus import wordnet\n",
+    "#https://www.geeksforgeeks.org/nlp-synsets-for-a-word-in-wordnet/\n",
+    "#https://www.geeksforgeeks.org/get-synonymsantonyms-nltk-wordnet-python/\n",
     "\n",
-    "        \n",
+    "#NOTE: With current system, will only be able to check for one word replacements\n",
+    "# Therefore multi-word replacements may still be missed\n",
     "\n",
+    "syns = wordnet.synsets('dog')\n",
+    "\n",
+    "first = syns[0]\n",
+    "\n",
+    "synonyms = set()\n",
+    "for syn in syns: \n",
+    "    for l in syn.lemmas(): \n",
+    "        synonyms.add(l.name()) \n",
+    "print(synonyms)\n",
+    "\n",
+    "print (\"Synset name :  \", first.name())\n",
+    "\n",
+    "hyper = first.hypernyms()\n",
+    "print (\"\\nSynset abstract term :  \", hyper) \n",
+    "  \n",
+    "hyper_words = set()\n",
+    "for m in hyper:\n",
+    "    #hyper_words.add(m.name())\n",
+    "    for word in m.lemmas():\n",
+    "        phrase = word.name().replace(\"_\", \" \") #Eliminating underscores to show one word vs 2 word statements\n",
+    "        if len(phrase.split()) == 1: #Identifying single word replacements\n",
+    "            hyper_words.add(phrase)\n",
+    "\n",
+    "hypo = first.hyponyms()\n",
+    "print (\"\\nSynset specific term :  \",  \n",
+    "       hypo) \n",
+    "  \n",
+    "hypo_words = set()\n",
+    "for k in hypo:\n",
+    "    #hypo_words.add(k.name())\n",
+    "    for word in k.lemmas():\n",
+    "        phrase = word.name().replace(\"_\", \" \") #Eliminating underscores to show one word vs 2 word statements\n",
+    "        if len(phrase.split()) == 1: #Identifying single word replacements\n",
+    "            hypo_words.add(phrase)\n",
+    "  \n",
+    "print (\"\\nHyper: \", hyper_words)\n",
+    "print (\"\\nHypo: \", hypo_words)\n",
     "\n"
    ]
   },
