Created Final Files
Added preprocess and postprocess, merged Kelton's WH questions, added basic ranking system, and moved everything from jupyter notebook onto .py files.

--- a/pos_tagger.ipynb
+++ b/pos_tagger.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Los', 'NNP'), ('Angeles', 'NNP'), ('has', 'VBZ'), ('a', 'DT'), ('Gyarados', 'NNP'), ('(', '('), ('ギャラドス', 'NNP'), (',', ','), ('Gyaradosu', 'NNP'), (',', ','), ('or', 'CC'), (')', ')'), ('is', 'VBZ'), ('a', 'DT'), ('Pokémon', 'JJ'), ('species', 'NNS'), ('in', 'IN'), ('Nintendo', 'NNP'), ('and', 'CC'), ('Game', 'NNP'), ('Freak', 'NNP'), (\"'s\", 'POS'), ('Pokémon', 'NNP'), ('franchise', 'NN'), ('.', '.'), ('Created', 'VBN'), ('by', 'IN'), ('Ken', 'NNP'), ('Sugimori', 'NNP'), (',', ','), ('Gyarados', 'NNP'), ('first', 'RB'), ('appeared', 'VBD'), ('in', 'IN'), ('the', 'DT'), ('video', 'NN'), ('games', 'NNS'), ('Pokémon', 'NNP'), ('Red', 'NNP'), ('and', 'CC'), ('Pokemon', 'NNP'), ('Green', 'NNP'), ('and', 'CC'), ('subsequent', 'JJ'), ('sequels', 'NNS'), (',', ','), ('later', 'RB'), ('appearing', 'VBG'), ('in', 'IN'), ('various', 'JJ'), ('merchandise', 'NN'), (',', ','), ('spinoff', 'NN'), ('titles', 'NNS'), ('and', 'CC'), ('animated', 'VBN'), ('and', 'CC'), ('printed', 'VBN'), ('adaptations', 'NNS'), ('of', 'IN'), ('the', 'DT'), ('franchise', 'NN'), ('.', '.'), ('Gyarados', 'NNP'), ('is', 'VBZ'), ('voiced', 'VBN'), ('by', 'IN'), ('Unshō', 'NNP'), ('Ishizuka', 'NNP'), ('in', 'IN'), ('both', 'DT'), ('Japanese', 'NNP'), ('and', 'CC'), ('English', 'JJ'), ('media', 'NNS'), ('.', '.')]\n"
+      "[('Harappan', 'NN')]\n"
      ]
     }
    ],
    "source": [
-    "tags = pos_tagger(word_list)\n",
+    "tags = pos_tagger([\"Harappan\"])\n",
     "print(tags)"
    ]
   },
@@ -190,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "assignment_2",
    "language": "python",
-   "name": "python3"
+   "name": "assignment_2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
